<resources>
    <string name="app_name">발도장</string>
    <string name="title_poster">포스터</string>
    <string name="title_matching">매칭</string>
    <string name="title_home">홈</string>
    <string name="title_map">지도</string>
    <string name="title_mypage">내정보</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="title_activity_poster_preview">PosterPreviewActivity</string>
</resources>