<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_poster"
        android:icon="@drawable/icon_poster"
        android:title="@string/title_poster" />

    <item
        android:id="@+id/navigation_matching"
        android:icon="@drawable/icon_match"
        android:title="@string/title_matching" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/icon_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/icon_mypage"
        android:title="@string/title_mypage" />

</menu>