<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_poster"
        android:name="com.swuproject.pawprints.ui.poster.PosterFragment"
        android:label="@string/title_poster"
        tools:layout="@layout/fragment_poster" />

    <fragment
        android:id="@+id/navigation_matching"
        android:name="com.swuproject.pawprints.ui.matching.MatchingFragment"
        android:label="@string/title_matching"
        tools:layout="@layout/fragment_matching" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.swuproject.pawprints.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.swuproject.pawprints.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.swuproject.pawprints.ui.mypage.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage">
        <action
            android:id="@+id/action_mypageFragment_to_contactUsFragment"
            app:destination="@id/contactUsFragment"
            app:popUpTo="@id/navigation_mypage"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_mypageFragment_to_editPetInfoFragment"
            app:destination="@id/editPetInfoFragment"
            app:popUpTo="@id/navigation_mypage"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_mypageFragment_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:popUpTo="@id/navigation_mypage"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_mypageFragment_to_faqFragment"
            app:destination="@id/faqFragment"
            app:popUpTo="@id/navigation_mypage"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_mypageFragment_to_MyLostReportFragment"
            app:destination="@id/myLostReportFragment"
            app:popUpTo="@id/navigation_mypage"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_mypageFragment_to_MySightReportFragment"
            app:destination="@id/mySightReportFragment"
            app:popUpTo="@id/navigation_mypage"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.swuproject.pawprints.ui.mypage.ContactUsFragment"
        android:label="fragment_contact_us"
        tools:layout="@layout/fragment_contact_us"/>
    <fragment
        android:id="@+id/editPetInfoFragment"
        android:name="com.swuproject.pawprints.ui.mypage.EditPetInfoFragment"
        android:label="fragment_edit_pet_info"
        tools:layout="@layout/fragment_edit_pet_info"/>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.swuproject.pawprints.ui.mypage.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile"/>
    <fragment
        android:id="@+id/faqFragment"
        android:name="com.swuproject.pawprints.ui.mypage.FaqFragment"
        android:label="fragment_faq"
        tools:layout="@layout/fragment_faq"/>
    <fragment
        android:id="@+id/myLostReportFragment"
        android:name="com.swuproject.pawprints.ui.mypage.MyLostReportFragment"
        android:label="fragment_my_lost_report"
        tools:layout="@layout/fragment_my_lost_report">
        <action
        android:id="@+id/action_myLostReportFragment_to_editLostReportFragment"
        app:destination="@id/editLostReportFragment"
        app:popUpTo="@id/action_mypageFragment_to_MyLostReportFragment"
        app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/mySightReportFragment"
        android:name="com.swuproject.pawprints.ui.mypage.MySightReportFragment"
        android:label="fragment_my_sight_report"
        tools:layout="@layout/fragment_my_sight_report">
        <action
            android:id="@+id/action_mySightReportFragment_to_editSightReportFragment"
            app:destination="@id/editSightReportFragment"
            app:popUpTo="@id/action_mypageFragment_to_MySightReportFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/editSightReportFragment"
        android:name="com.swuproject.pawprints.ui.mypage.EditSightReportFragment"
        android:label="fragment_edit_sight_report"
        tools:layout="@layout/fragment_edit_sight_report" />

    <fragment
        android:id="@+id/editLostReportFragment"
        android:name="com.swuproject.pawprints.ui.mypage.EditLostReportFragment"
        android:label="fragment_edit_lost_report"
        tools:layout="@layout/fragment_edit_lost_report" />

</navigation>